se agrega servicio de formatepo de datos para tabla detalle mod pres
