# swagger/swagger.json
@@ -542,6 +542,23 @@
                 }
             }
         },
+        "/modificacion_apropiacion/{vigencia}/{CG}": {
+            "get": {
+                "tags": [
+                    "modificacion_apropiacion"
+                ],
+                "description": "get all objects",
+                "operationId": "ModificacionPresupuestalController.GetAllModificacionPresupuestalByVigenciaAndCG",
+                "responses": {
+                    "200": {
+                        "description": "DocumentoPresupuestal models.DocumentoPresupuestal"
+                    },
+                    "403": {
+                        "description": ":objectId is empty"
+                    }
+                }
+            }
+        },
         "/movimiento/": {
             "post": {
                 "tags": [
@@ -728,60 +745,60 @@
         }
     },
     "definitions": {
-        "1965.0xc000491f20.false": {
+        "7699.0xc00048a630.false": {
             "title": "false",
             "type": "object"
         },
-        "2024.string.0xc00049ce00": {
-            "title": "0xc00049ce00",
+        "7758.string.0xc00048cca0": {
+            "title": "0xc00048cca0",
             "type": "object"
         },
-        "2233.string.0xc00049cfc0": {
-            "title": "0xc00049cfc0",
+        "7967.string.0xc00048ce60": {
+            "title": "0xc00048ce60",
             "type": "object"
         },
-        "2301.0xc0004a00f0.false": {
+        "8035.0xc00048a7e0.false": {
             "title": "false",
             "type": "object"
         },
-        "2353.string.0xc00049d100": {
-            "title": "0xc00049d100",
+        "8087.string.0xc00048cfa0": {
+            "title": "0xc00048cfa0",
             "type": "object"
         },
-        "2409.string.0xc00049d1a0": {
-            "title": "0xc00049d1a0",
+        "8143.string.0xc00048d040": {
+            "title": "0xc00048d040",
             "type": "object"
         },
-        "2624.string.0xc00049d360": {
-            "title": "0xc00049d360",
+        "8358.string.0xc00048d200": {
+            "title": "0xc00048d200",
             "type": "object"
         },
-        "2722.string.0xc00049d400": {
-            "title": "0xc00049d400",
+        "8456.string.0xc00048d2a0": {
+            "title": "0xc00048d2a0",
             "type": "object"
         },
-        "2818.string.0xc00049d4a0": {
-            "title": "0xc00049d4a0",
+        "8552.string.0xc00048d340": {
+            "title": "0xc00048d340",
             "type": "object"
         },
-        "2926.string.0xc00049d560": {
-            "title": "0xc00049d560",
+        "8660.string.0xc00048d400": {
+            "title": "0xc00048d400",
             "type": "object"
         },
-        "3024.string.0xc00049d600": {
-            "title": "0xc00049d600",
+        "8758.string.0xc00048d4a0": {
+            "title": "0xc00048d4a0",
             "type": "object"
         },
-        "3115.string.0xc00049d6a0": {
-            "title": "0xc00049d6a0",
+        "8849.string.0xc00048d540": {
+            "title": "0xc00048d540",
             "type": "object"
         },
-        "3215.string.0xc00049d740": {
-            "title": "0xc00049d740",
+        "8949.string.0xc00048d5e0": {
+            "title": "0xc00048d5e0",
             "type": "object"
         },
-        "3314.string.0xc00049d7e0": {
-            "title": "0xc00049d7e0",
+        "9048.string.0xc00048d680": {
+            "title": "0xc00048d680",
             "type": "object"
         },
         "models.Alert": {
@@ -869,7 +886,7 @@
                 "Actividades": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/2024.string.0xc00049ce00"
+                        "$ref": "#/definitions/7758.string.0xc00048cca0"
                     }
                 },
                 "Id": {
@@ -880,7 +897,7 @@
                     "type": "string"
                 },
                 "RubroNecesidadId": {
-                    "$ref": "#/definitions/1965.0xc000491f20.false"
+                    "$ref": "#/definitions/7699.0xc00048a630.false"
                 }
             }
         },
@@ -1042,7 +1059,7 @@
                 "Fuentes": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/2353.string.0xc00049d100"
+                        "$ref": "#/definitions/8087.string.0xc00048cfa0"
                     }
                 },
                 "Id": {
@@ -1050,7 +1067,7 @@
                     "format": "int64"
                 },
                 "InfoRubro": {
-                    "$ref": "#/definitions/2233.string.0xc00049cfc0"
+                    "$ref": "#/definitions/7967.string.0xc00048ce60"
                 },
                 "Metas": {
                     "type": "array",
@@ -1059,12 +1076,12 @@
                     }
                 },
                 "NecesidadId": {
-                    "$ref": "#/definitions/2301.0xc0004a00f0.false"
+                    "$ref": "#/definitions/8035.0xc00048a7e0.false"
                 },
                 "Productos": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/2409.string.0xc00049d1a0"
+                        "$ref": "#/definitions/8143.string.0xc00048d040"
                     }
                 },
                 "RubroId": {
@@ -1170,40 +1187,40 @@
                 "ActividadEconomicaNecesidad": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/3215.string.0xc00049d740"
+                        "$ref": "#/definitions/8949.string.0xc00048d5e0"
                     }
                 },
                 "ActividadEspecificaNecesidad": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/3115.string.0xc00049d6a0"
+                        "$ref": "#/definitions/8849.string.0xc00048d540"
                     }
                 },
                 "DetallePrestacionServicioNecesidad": {
-                    "$ref": "#/definitions/2818.string.0xc00049d4a0"
+                    "$ref": "#/definitions/8552.string.0xc00048d340"
                 },
                 "DetalleServicioNecesidad": {
-                    "$ref": "#/definitions/2722.string.0xc00049d400"
+                    "$ref": "#/definitions/8456.string.0xc00048d2a0"
                 },
                 "MarcoLegalNecesidad": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/3024.string.0xc00049d600"
+                        "$ref": "#/definitions/8758.string.0xc00048d4a0"
                     }
                 },
                 "Necesidad": {
-                    "$ref": "#/definitions/2624.string.0xc00049d360"
+                    "$ref": "#/definitions/8358.string.0xc00048d200"
                 },
                 "ProductosCatalogoNecesidad": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/2926.string.0xc00049d560"
+                        "$ref": "#/definitions/8660.string.0xc00048d400"
                     }
                 },
                 "RequisitoMinimoNecesidad": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/3314.string.0xc00049d7e0"
+                        "$ref": "#/definitions/9048.string.0xc00048d680"
                     }
                 },
                 "Rubros": {
